Write endpoint for deployments
